--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -1,6 +1,9 @@
-<header>
-    <a href="{% url 'login' %}">Login</a>
-</header>
-
-
 <h1>Home Page</h1>
+
+{% if user.is_authenticated %}
+    <p>Hello {{user.username}}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
+
