--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -2,6 +2,9 @@
 
 {% if user.is_authenticated %}
     <p>Hello {{user.username}}</p>
+    <p>
+        <a href="{% url 'profile' %}">Profile Page</a>
+    </p>
     <a href="{% url 'logout' %}">Logout</a>
 {% else %}
     <a href="{% url 'login' %}">Login</a>
