--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -2,6 +2,14 @@
 
 {% if user.is_authenticated %}
     <p>Hello {{user.username}}</p>
+
+    <h4>Gallons Requested: <input type="text"></h4>
+    <h4>Delivery Address: <input type="text"></h4>
+    <h4>Delivery Date: <input type="text"></h4>
+    <h4>Suggested Price: <input type="text"></h4>
+    <input type="submit" value="Calculate the Price">
+    <h4>Total Amount Due: <input type="text"></h4>
+
     <a href="{% url 'logout' %}">Logout</a>
 {% else %}
     <a href="{% url 'login' %}">Login</a>
