--- a/sd_app/templates/sd_app/buy.html
+++ b/sd_app/templates/sd_app/buy.html
@@ -2,6 +2,7 @@
     
     {% block content %}
     <body>
+        <!-- Display price/gal -->
         <form action="{% url 'buy' %}">
             <p>Purchuse Form</p>
             <h4>Quantity (gal): <input type="text"></h4>
