--- a/sd_app/templates/sd_app/base.html
+++ b/sd_app/templates/sd_app/base.html
@@ -1,6 +1,6 @@
 <!-- Content shared across all pages in website.-->
 <p>
-  <a href="{% url 'home' %}">Home Page</a>
+  <a href="{% url 'sd_app:home' %}">Home Page</a>
 </p>
 
 {% block content %}
