--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -3,10 +3,11 @@
 {% if user.is_authenticated %}
     <p>Hello {{user.username}}</p>
     <p>
-        <a href="{% url 'profile' %}">Profile Page</a>
+        <a href="{% url 'sd_app:profile' %}">Profile Page</a>
     </p>
     <a href="{% url 'logout' %}">Logout</a>
 {% else %}
     <a href="{% url 'login' %}">Login</a>
+    
 {% endif %}
 
