--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -8,6 +8,9 @@
     <a href="{% url 'logout' %}">Logout</a>
 {% else %}
     <a href="{% url 'login' %}">Login</a>
-    
+</br>
+</br>
+</br>
+    <a href="{% url 'sd_app:register' %}">Register</a>
 {% endif %}
 
