--- a/sd_app/templates/sd_app/profile.html
+++ b/sd_app/templates/sd_app/profile.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    <p>profile here</p>
+    <p>profile sdsdaadhere</p>
     <h4>Full Name: <input type="text"></h4>
     <h4>Address1: <input type="text"></h4>
     <h4>Address2: <input type="text"></h4>
