--- a/sd_app/templates/registration/register.html
+++ b/sd_app/templates/registration/register.html
@@ -5,14 +5,14 @@
 
 
 <!--Register--> 
-<div class="container py-5">
-	<h1>Register</h1>
-	<form method="POST">
+<div>
+	<h1>Register Page</h1>
+	<form action="{% url 'sd_app:register' %}" method="POST">
 		{% csrf_token %}
-		{{ register_form }}                    
+		{{ register_form.as_p }}                    
 		<button class="btn btn-primary" type="submit">Register</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p class="text-center">If you already have an account, <a href="{% url 'login' %}">login</a> instead.</p>
 </div>
 
 {% endblock %}
