--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -3,9 +3,14 @@
 {% if user.is_authenticated %}
     <p>Hello {{user.username}}</p>
     <p>
-        <a href="{% url 'sd_app:profile' %}">Profile Page</a>
+        <a href="{% url 'sd_app:profile' %}">Profile</a>
+    </br>
+    </br>
+        <a href="{% url 'sd_app:buy' %}">Make a purchase</a>
+    </br>
+    </br>
+        <a href="{% url 'logout' %}">Logout</a>
     </p>
-    <a href="{% url 'logout' %}">Logout</a>
 {% else %}
     <a href="{% url 'login' %}">Login</a>
 </br>
