Setup transaction history on profile page.

--- a/sd_app/templates/sd_app/buy.html
+++ b/sd_app/templates/sd_app/buy.html
@@ -6,8 +6,8 @@
         <form method="POST" action="{% url 'sd_app:buy' %}">
             {% csrf_token %}
             {{ buy_form.as_p }}
-            <button type="submit">Calculate</button>
-                                    
+            <button type="submit">Submit Order</button>
+
         </form>
     </body>
         
