--- a/sd_app/templates/sd_app/profile.html
+++ b/sd_app/templates/sd_app/profile.html
@@ -15,6 +15,11 @@
         {{ profile_form.as_p }}
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
+    <br>
+    <h2>Purchase History</h2>
+    {% for purchase in purchases %}
+        <li>{{ purchase }}</li>
+    {% endfor %}
 </body>
 </html>
 {% endblock %}
