--- a/sd_app/templates/sd_app/buy.html
+++ b/sd_app/templates/sd_app/buy.html
@@ -1,7 +1,7 @@
 {% extends "sd_app/base.html" %}
     
     {% block content %}
-    <h2> Transaction Form</h2>
+    <h2> Fuel Quote Form</h2>
     <body>        
         <form method="POST" action="{% url 'sd_app:buy' %}">
             {% csrf_token %}
