--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -1,12 +1,12 @@
-<h1>Home Page</h1>
+<h1>ABC Fuel Company Dashboard</h1>
 
 {% if user.is_authenticated %}
     <p>Hello {{user.username}}</p>
     <p>
-        <a href="{% url 'sd_app:profile' %}">Profile</a>
+        <a href="{% url 'sd_app:profile' %}">Profile / Fuel Quote History</a>
     </br>
     </br>
-        <a href="{% url 'sd_app:buy' %}">Make a purchase</a>
+        <a href="{% url 'sd_app:buy' %}">Fuel Quote Form</a>
     </br>
     </br>
         <a href="{% url 'logout' %}">Logout</a>
