--- a/sd_app/templates/sd_app/profile.html
+++ b/sd_app/templates/sd_app/profile.html
@@ -16,7 +16,7 @@
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
     <br>
-    <h2>Purchase History</h2>
+    <h2>Fuel Quote History</h2>
     {% for purchase in purchases %}
         <li>{{ purchase }}</li>
     {% endfor %}
