make purchase history a new page, add new test to pass 80% coverage

--- a/sd_app/templates/sd_app/home.html
+++ b/sd_app/templates/sd_app/home.html
@@ -9,6 +9,9 @@
         <a href="{% url 'sd_app:buy' %}">Make a purchase</a>
     </br>
     </br>
+        <a href="{% url 'sd_app:purchase_history' %}">Purchase History</a>
+    </br>
+    </br>
         <a href="{% url 'logout' %}">Logout</a>
     </p>
 {% else %}
