removed double borders from history table

--- a/sd_app/templates/sd_app/purchase_history.html
+++ b/sd_app/templates/sd_app/purchase_history.html
@@ -8,6 +8,12 @@
     {% extends "sd_app/base.html" %}
 
     {% block content %}
+    <style>
+        table {
+            border-collapse: collapse;            
+        }
+        
+    </style>
 <body>
     <h3>{{ user.username }}</h3>
     <h2>Fuel Quote History</h2>
