--- a/sd_app/templates/sd_app/buy.html
+++ b/sd_app/templates/sd_app/buy.html
@@ -6,9 +6,14 @@
     <form method="POST" action="{% url 'sd_app:buy' %}">
         {% csrf_token %}
         {{ buy_form.as_p }}
+        <p>Price: {{price}} </p>
+        <p>Total Amount: {{total_amount}}</p>
         <p>Delivery Address: {{ address_1 }}, {{ address_2 }}, {{ city }}, {{ state }} {{ zipcode }} </p>
-        <button type="submit">Submit</button>
+        <button type="submit" name="quotet">Get Quote</button>
+        <button type="submit" name="submit">Submit</button>
+       
     </form>
+ 
 </body>
     
 {% endblock content %}
