--- a/sd_app/templates/sd_app/purchase_history.html
+++ b/sd_app/templates/sd_app/purchase_history.html
@@ -37,11 +37,11 @@
             <td>{{ item.delivery_date }}</td>
             <td>{{ item.suggested_price }}</td>
             <td> $ {{ item.total_amount_due }}</td>
-            <td> {{ address_1 }}</td>
-            <td> {{ address_2 }}</td>
-            <td> {{ city }}</td>
-            <td> {{ state }}</td>
-            <td> {{ zipcode }}</td>
+            <td> {{ item.address_1 }}</td>
+            <td> {{ item.address_2 }}</td>
+            <td> {{ item.city }}</td>
+            <td> {{ item.state }}</td>
+            <td> {{ item.zipcode }}</td>
 
         </tr>
         {% endfor %}
